welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var x:String
    ^BDR2:1: error: local variables must be initialized
var x:String
    ^BDR2:3: error: not found: value ==
  case x == "R" => droite();avance()
         ^BDR2:4: error: not found: value ==
  case x == "L" => gauche();avance()
         ^BDR2:5: error: not found: value ==
  case x == "I" => retourne();avance()
         ^BDR2:6: error: not found: value ==
  case x == "A" => avance()
         ^BDR2:7: error: not found: value ==
  case x == "B" => avance();avance()
         ^BDR2:8: error: not found: value ==
  case x == "C" => avance();avance();avance()
         ^BDR2:9: error: not found: value ==
  case x == "D" => avance();avance();avance();avance()
         ^BDR2:10: error: not found: value ==
  case x == "E" => avance();avance();avance();avance();avance()
         ^BDR2:11: error: not found: value ==
  case x == "F" => avance();avance();avance();avance();avance();avance()
         ^BDR2:12: error: not found: value ==
  case x == "Z" => recule()
         ^BDR2:13: error: not found: value ==
  case x == "Y" => recule();recule()
         ^BDR2:14: error: not found: value ==
  case x == "X" => recule();recule();recule()
         ^BDR2:15: error: not found: value ==
  case x == "W" => recule();recule();recule();recule()
         ^BDR2:16: error: not found: value ==
  case x == "V" => recule();recule();recule();recule();recule()
         ^BDR2:17: error: type mismatch;
 found   : String("U")
 required: Boolean
  case "U" => recule();recule();recule();recule();recule();recule()
       ^