welcome.lessons.welcome.bdr.BDR2.scala.code
var x:String
litMessage == x match {
  case x == "R" => droite();avance()
  case x == "L" => gauche();avance()
  case x == "I" => retourne();avance()
  case x == "A" => avance()
  case x == "B" => avance();avance()
  case x == "C" => avance();avance();avance()
  case x == "D" => avance();avance();avance();avance()
  case x == "E" => avance();avance();avance();avance();avance()
  case x == "F" => avance();avance();avance();avance();avance();avance()
  case x == "Z" => recule()
  case x == "Y" => recule();recule()
  case x == "X" => recule();recule();recule()
  case x == "W" => recule();recule();recule();recule()
  case x == "V" => recule();recule();recule();recule();recule()
  case "U" => recule();recule();recule();recule();recule();recule()
}